@@ -7,6 +7,9 @@
  * Fixed some missing dojo/dijit nls directories in the non-dev
    release zipfile.
 
+ * Fixed a bug with handling of timeout events in HTMLFeatures tracks.
+   Thanks to Matt Henderson of KBase for pointing this out.
+
 1.8.1     2013-02-12 12:56:24 EST5EDT
 
  * Added support for `cigarAttribute` and `mdAttributes` configuration
